[metadata]
name = aqua-astrocytes
version = 0.0.1
author = Max Collard
author_email = maxwell.collard@gmail.com
description = A Python interface for Astrocyte Quantification and Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxcollard/aqua-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
	numpy
	pandas
	h5py
	pyyaml
	tqdm
	scipy
	statsmodels
	scikit-learn

[options.packages.find]
where = src
