[metadata]
name = aqua-astrocytes
version = 0.1.1
author = Max Collard
author_email = maxwell.collard@gmail.com
description = A Python interface for Astrocyte Quantification and Analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maxcollard/aqua-astrocytes
license = MIT
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Bio-Informatics
	Programming Language :: Python :: 3.8

[options]
package_dir =
	aqua = src/aqua
packages =
	aqua
python_requires = >=3.8
install_requires =
	h5py==3.9.0
	numpy==1.24.3
	pandas==2.0.3
	pyyaml==6.0.1
	scikit-learn==1.3.0
	scipy==1.10.1
	statsmodels==0.14.0
	tqdm==4.65.0

#